--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="info">
                     <div class="info-text">
                         <h3>Instructions</h3>
-                        <p>Try to answer the questions</p>
+                        <p>For the following questions, choose the best answer.</p>
                         <p>A timer will appear and start decreasing once you press the start button</p>
                         <p>Choosing the wrong answer will decrease your time by 5 seconds</p>
                         <p>Good luck!</p>
@@ -67,43 +67,46 @@
                         </div>
                         <div class="display-question3">
                             <span class="questionTxt">
-                                What does JS stand for?
+                                What do we type in javascript to call a function?
                             </span>
                             <div class="buttons">
-                                <button class="button1">Javascript</button>
+                                <button class="button1">function name</button>
                             </div>
                             <div class="buttons">
-                                <button class="button2">John Snow</button>
+                                <button class="button2">FUNCTION</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button3">Junior Scripter</button>
+                                <button class="button3">function.name</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button4">Jack Sparrow</button>
+                                <button class="button4">functionName();</button>
                             </div>
                         </div>
                         <div class="display-question4">
                             <span class="questionTxt">
-                                What does JS stand for?
+                                What does HTML stand for?
                             </span>
                             <div class="buttons">
-                                <button class="button1">Javascript</button>
+                                <button class="button1">HyperText Markup Language</button>
                             </div>
                             <div class="buttons">
-                                <button class="button2">John Snow</button>
+                                <button class="button2">How Tim Met Lucy</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button3">Junior Scripter</button>
+                                <button class="button3">Hour Time Minutes Lane</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button4">Jack Sparrow</button>
+                                <button class="button4">Honor Truth Miracle Lore</button>
                             </div>
                         </div>
                     </div>
                     
                 </div>
 
-                <button class="next-button">Next</button>
+                <button class="next-button1">Next</button>
+                <button class="next-button2">Next</button>
+                <button class="next-button3">Next</button>
+                <button class="next-button4">Next</button>
             </div>
 
         </section>
