Added experimental event listeners

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                                 <button class="button4">Honor Truth Miracle Lore</button>
                             </div>
                         </div>
+                        <div class="victory">
+                            <span>You Win!</span>
+                        </div>
                     </div>
                     
                 </div>
@@ -113,7 +116,7 @@
         <section>
             <div class="timer">
                 <div class="timer-text"></div>
-                <div class="timer-count">25</div>
+                <div class="timer-count">50</div>
                 <h3 class="timer-text2">seconds remaining</h3>
             </div>
         </section>
