consolidated some event listeners

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                                 <button class="button1">Javascript</button>
                             </div>
                             <div class="buttons">
-                                <button class="button2">John Snow</button>
+                                <button class="buttonW">John Snow</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button3">Junior Scripter</button>
+                                <button class="buttonW">Junior Scripter</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button4">Jack Sparrow</button>
+                                <button class="buttonW">Jack Sparrow</button>
                             </div>
                         </div>
                         <div class="display-question2">
@@ -53,16 +53,16 @@
                                 What does CSS stand for?
                             </span>
                             <div class="buttons">
-                                <button class="button1">Can't stand still</button>
+                                <button class="buttonW">Can't stand still</button>
                             </div>
                             <div class="buttons">
-                                <button class="button2">Course self study</button>
+                                <button class="buttonW">Course self study</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button3">Cascading style sheets</button>
+                                <button class="button2">Cascading style sheets</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button4">Create style sheet</button>
+                                <button class="buttonW">Create style sheet</button>
                             </div>
                         </div>
                         <div class="display-question3">
@@ -70,16 +70,16 @@
                                 What do we type in javascript to call a function?
                             </span>
                             <div class="buttons">
-                                <button class="button1">function name</button>
+                                <button class="buttonW">function name</button>
                             </div>
                             <div class="buttons">
-                                <button class="button2">FUNCTION</button>
+                                <button class="buttonW">FUNCTION</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button3">function.name</button>
+                                <button class="buttonW">function.name</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button4">functionName();</button>
+                                <button class="button3">functionName();</button>
                             </div>
                         </div>
                         <div class="display-question4">
@@ -87,16 +87,16 @@
                                 What does HTML stand for?
                             </span>
                             <div class="buttons">
-                                <button class="button1">HyperText Markup Language</button>
+                                <button class="buttonW">How Tim Met Lucy</button>
                             </div>
                             <div class="buttons">
-                                <button class="button2">How Tim Met Lucy</button>
+                                <button class="button4">HyperText Markup Language</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button3">Hour Time Minutes Lane</button>
+                                <button class="buttonW">Hour Time Minutes Lane</button>
                             </div>                        
                             <div class="buttons">
-                                <button class="button4">Honor Truth Miracle Lore</button>
+                                <button class="buttonW">Honor Truth Miracle Lore</button>
                             </div>
                         </div>
                         <div class="victory">
