--- a/index.html
+++ b/index.html
@@ -101,15 +101,17 @@
                         </div>
                         <div class="victory">
                             <span>You Win!</span>
+                            <form>
+                                <label for="initials">Initials</label>
+                                <input type="text" id="initials" name="initials">
+                                <input type="submit" value="submit" class="submitBtn">
+                            </form>
                         </div>
                     </div>
                     
                 </div>
 
-                <button class="next-button1">Next</button>
-                <button class="next-button2">Next</button>
-                <button class="next-button3">Next</button>
-                <button class="next-button4">Next</button>
+
             </div>
 
         </section>
@@ -118,6 +120,14 @@
                 <div class="timer-text"></div>
                 <div class="timer-count">50</div>
                 <h3 class="timer-text2">seconds remaining</h3>
+            </div>
+        </section>
+        <section>
+            <div class="HighScores">
+                <div class="High-Scores-text">
+                    High Scores
+                </div>
+                
             </div>
         </section>
     </main>
